[package]
name = "transfers-indexer"
version = "0.0.1"
authors = ["Eugene The Dream"]
rust-version = "1.86.0"
edition = "2021"

[dependencies]
bigdecimal = "=0.1.0"
anyhow = "1.0.51"

openssl-probe = { version = "0.1.5" }
# futures = "0.3.5"
tokio = { version = "1", features = ["time", "sync", "rt-multi-thread"] }
tokio-stream = { version = "0.1" }
tokio-retry = "0.3.0"

dotenv = "0.15.0"
tracing = { version = "0.1.13", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "fmt",
    "registry",
    "std",
] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.12.0"

fastnear-primitives = "0.32.1"
fastnear-neardata-fetcher = "0.32.1"

clickhouse = { version = "0.13", features = ["native-tls", "lz4"] }
reqwest = { version = "0.12.2", features = ["json"] }
base64 = "0.22.1"

signal-hook = "0.3.18"
hashlink = "0.10.0"

